# festim_niuq

./: .gitignore  =1.2.11  =4.3.13  CITATION.cff  CODE_OF_CONDUCT.md  CONFERENCE_PRESENTATION.md  CONTRIBUTING.md  LICENSE  README.md  TODO_PLAN.md  __init__.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: paper.yaml  pylint.yml  tests.yml
docs/: CONFERENCE_PRESENTATION.md  appendix_festim_niuq.tex
examples/: demo_uq_workflow.py  run_verification_uq.py
examples/config/: config.uq_test_c1975.yaml  config.uq_test_cj1959.yaml
examples/slurm_scripts/: festim_run_hawk.sl
festim_model/: Model.py  __init__.py  warnings_config.py
festim_model/diagnostics/: Diagnoistics.py  Diagnostics.py  __init__.py
paper/: paper.bib  paper.md
src/festim_niuq/: __init__.py
src/festim_niuq/festim_model/: Model.py  warnings_config.py
src/festim_niuq/uq/: __init__.py  bayesian_inverse_uq.py  covariance_influence_analysis.py  easyvvuq_festim.py  easyvvuq_festim_correlated.py  festim_model_run.py  festim_model_scan.py  interactive_run_viewer.py  polynomial_order_analysis.py  reanalyse_existing_campaign.py  uq_postprocessing.py
src/festim_niuq/uq/util/: Decoder.py  __init__.py  plotting.py  utils.py
tests/: conftest.py  test_decoder.py  test_easyvvuq_campaign.py  test_encoder.py  test_plotting.py  test_scientific.py  test_utils.py
tests/verification/: gfederici1991.py  test_gfederici1991.py
uq/: __init__.py  bayesian_inverse_uq.py  config.yaml  config_2D_test.yaml  config_Li2O.yaml  covariance_influence_analysis.py  easyvvuq_festim.py  easyvvuq_festim_correlated.py  festim.template  festim_model_run.py  festim_model_scan.py  festim_yaml.template  interactive_run_viewer.py  output.csv  test_config.yaml  test_yaml_encoder.py  uq_postprocessing.py
uq/config/: config.uq_test_c1975.yaml  config.uq_test_cj1959.yaml  config_bayesian_ss.yaml  test_config_advanced.yaml
uq/data/neutron_flux/: convert_mesh.py  salome_compiler.py  salome_meshio.py
uq/festim_campaign_e4ud2ajk/: .qcgpj_in_act_7  .qcgpj_in_prev_1  .qcgpj_in_prev_2  .qcgpj_in_prev_3  .qcgpj_in_prev_4  .qcgpj_in_prev_5  .qcgpj_in_prev_6  .qcgpj_in_prev_7  .qcgpj_in_prev_8  campaign.db  stderr_3  stdout_1  stdout_2  stdout_3  stdout_4  stdout_5  stdout_6  stdout_7  stdout_8
uq/festim_campaign_e4ud2ajk/runs/runs_0-100000000/runs_0-1000000/runs_0-10000/runs_0-100/run_3/: config.yaml
uq/festim_campaign_e4ud2ajk/runs/runs_0-100000000/runs_0-1000000/runs_0-10000/runs_0-100/run_4/: output.csv
uq/festim_campaign_e4ud2ajk/runs/runs_0-100000000/runs_0-1000000/runs_0-10000/runs_0-100/run_5/: config.yaml
uq/festim_campaign_e4ud2ajk/runs/runs_0-100000000/runs_0-1000000/runs_0-10000/runs_0-100/run_6/: config.yaml
uq/festim_campaign_e4ud2ajk/runs/runs_0-100000000/runs_0-1000000/runs_0-10000/runs_0-100/run_6/results/: results.txt
uq/festim_campaign_vs00ldxe/: .qcgpj_in_prev_1  .qcgpj_in_prev_2  .qcgpj_in_prev_3  .qcgpj_in_prev_4  .qcgpj_in_prev_5  .qcgpj_in_prev_6  .qcgpj_in_prev_7  .qcgpj_in_prev_8  campaign.db  stderr_1  stderr_2  stderr_3  stderr_4  stderr_5  stderr_6  stderr_7  stderr_8  stdout_1  stdout_2  stdout_3  stdout_4  stdout_5  stdout_6  stdout_7  stdout_8
uq/festim_campaign_vs00ldxe/runs/runs_0-100000000/runs_0-1000000/runs_0-10000/runs_0-100/run_4/: config.yaml
uq/results/: mobile_concentration.h5  results_tritium_concentration.txt
uq/util/: Decoder.py  Encoder.py  Parameters.py  __init__.py  plotting.py  utils.py
